syntax = "proto3";

package spqr;

option go_package = "spqr/proto";

import "google/protobuf/empty.proto";
import "protos/qualified_name.proto";

message DistributionKeyEntry {
  string column = 1;
  string hashFunction = 2;
}

message DistributedRelation {
  string name = 1;
  repeated DistributionKeyEntry distributionKey = 2;
  bool ReplicatedRelation = 3;
  map<string, string> sequenceColumns = 4;
  string schema_name = 5;
}

message Distribution {
  string id = 1;
  repeated string ColumnTypes = 2;
  repeated DistributedRelation relations = 3;
}

message CreateDistributionRequest{
  repeated Distribution distributions = 1;
}

message ListDistributionsReply {
  repeated Distribution distributions = 1;
}

message DropDistributionRequest {
  repeated string ids = 1;
}

message AlterDistributionAttachRequest{
  string id = 1;
  repeated DistributedRelation relations = 3;
}

message AlterDistributionDetachRequest{
  string id = 1;
  repeated QualifiedName relNames = 2;
}

message AlterDistributedRelationRequest{
  string id = 1;
  DistributedRelation relation = 2;
}

message GetDistributionRequest{
  string id = 1;
}

message GetDistributionReply {
  Distribution distribution = 1;
}

message GetRelationDistributionRequest {
  string name = 1;
  string schemaName = 2;
}

message GetRelationDistributionReply {
  Distribution distribution = 1;
}

message NextValRequest {
  string seq = 1;
}

message NextValReply {
  int64 value = 1;
}

message CurrValRequest {
  string seq = 1;
}

message CurrValReply {
  int64 value = 1;
}

message ListSequencesReply {
  repeated string names = 1;
}

message DropSequenceRequest {
  string name = 1;
}

message ListRelationSequencesRequest {
  string name = 1;
  string schemaName = 2;
}

message ListRelationSequencesReply {
  map<string, string> columnSequences = 1;
}

service DistributionService {
  rpc CreateDistribution(CreateDistributionRequest) returns (google.protobuf.Empty) {}
  rpc DropDistribution(DropDistributionRequest) returns (google.protobuf.Empty) {}
  rpc ListDistributions(google.protobuf.Empty) returns (ListDistributionsReply) {}

  rpc AlterDistributionAttach(AlterDistributionAttachRequest) returns (google.protobuf.Empty) {}
  rpc AlterDistributionDetach(AlterDistributionDetachRequest) returns (google.protobuf.Empty) {}
  rpc AlterDistributedRelation(AlterDistributedRelationRequest) returns (google.protobuf.Empty) {}

  rpc GetDistribution(GetDistributionRequest) returns (GetDistributionReply) {}

  rpc GetRelationDistribution(GetRelationDistributionRequest) returns (GetRelationDistributionReply) {}

  rpc NextVal(NextValRequest) returns (NextValReply) {}
  rpc CurrVal(CurrValRequest) returns (CurrValReply) {}

  rpc ListSequences(google.protobuf.Empty) returns (ListSequencesReply) {}
  rpc ListRelationSequences(ListRelationSequencesRequest) returns (ListRelationSequencesReply) {}
  rpc DropSequence(DropSequenceRequest) returns (google.protobuf.Empty) {}
}
